--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	"dependencies": {
 		"@awesome-cordova-plugins/barcode-scanner": "^5.37.1",
 		"@awesome-cordova-plugins/core": "^5.37.1",
+		"@awesome-cordova-plugins/geolocation": "^5.37.3",
+		"@awesome-cordova-plugins/native-geocoder": "^5.37.3",
 		"@capacitor/app": "1.0.5",
 		"@capacitor/core": "3.2.5",
 		"@capacitor/haptics": "1.1.2",
@@ -25,9 +27,13 @@
 		"@ionic/vue-router": "^5.4.0",
 		"axios": "^0.24.0",
 		"capacitor-firebase-auth": "^3.0.0",
+		"cordova-plugin-geolocation": "^4.1.0",
+		"cordova-plugin-instagram-stories": "git+https://github.com/gregavola/cordova-plugin-instagram-stories.git",
+		"cordova-plugin-nativegeocoder": "^3.4.1",
 		"core-js": "^3.6.5",
 		"creditcards": "^4.2.0",
 		"firebase": "8.10.0",
+		"ionic-native": "^2.9.0",
 		"phonegap-plugin-barcodescanner": "^8.1.0",
 		"qrcode": "^1.5.0",
 		"swiper": "6",
