--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We need access to camera to add images for product description</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to photos to add images for product description</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We need to find nearest restaurants</string>
 	<key>NSCameraUsageDescription</key>
@@ -29,7 +33,6 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>instagram-stories</string>
 				<string>com.googleusercontent.apps.1033159312679-sblh08qlh22upq7pi7f23pfrjjqpjkjv</string>
 			</array>
 		</dict>
