--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "niamka",
 	"version": "0.0.1",
 	"private": true,
+	"description": "An Ionic project",
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
@@ -14,52 +15,62 @@
 		"@awesome-cordova-plugins/barcode-scanner": "^5.37.1",
 		"@awesome-cordova-plugins/core": "^5.37.1",
 		"@awesome-cordova-plugins/geolocation": "^5.37.3",
+		"@awesome-cordova-plugins/in-app-browser": "^5.41.0",
 		"@awesome-cordova-plugins/native-geocoder": "^5.37.3",
 		"@capacitor/app": "1.0.5",
+		"@capacitor/camera": "^1.2.4",
 		"@capacitor/core": "3.2.5",
+		"@capacitor/dialog": "^1.0.7",
 		"@capacitor/haptics": "1.1.2",
 		"@capacitor/ios": "3.3.3",
 		"@capacitor/keyboard": "1.1.2",
 		"@capacitor/splash-screen": "^1.2.0",
 		"@capacitor/status-bar": "1.0.5",
+		"@firebase/auth": "^0.19.11",
 		"@googlemaps/js-api-loader": "^1.12.6",
-		"@ionic/vue": "^5.4.0",
-		"@ionic/vue-router": "^5.4.0",
+		"@ionic/core": "^6.0.5",
+		"@ionic/pwa-elements": "^3.1.1",
+		"@ionic/vue": "^6.0.5",
+		"@ionic/vue-router": "^6.0.5",
 		"axios": "^0.24.0",
 		"capacitor-firebase-auth": "^3.0.0",
 		"cordova-plugin-geolocation": "^4.1.0",
-		"cordova-plugin-instagram-stories": "git+https://github.com/gregavola/cordova-plugin-instagram-stories.git",
+		"cordova-plugin-inappbrowser": "^5.0.0",
 		"cordova-plugin-nativegeocoder": "^3.4.1",
 		"core-js": "^3.6.5",
 		"creditcards": "^4.2.0",
+		"date-fns": "^2.28.0",
 		"firebase": "8.10.0",
 		"ionic-native": "^2.9.0",
+		"luxon": "^2.3.1",
 		"phonegap-plugin-barcodescanner": "^8.1.0",
 		"qrcode": "^1.5.0",
-		"swiper": "6",
-		"vee-validate": "^4.5.4",
-		"vue": "^3.2.1",
-		"vue-axios": "^3.3.7",
-		"vue-router": "^4.0.0-0",
-		"vue3-google-map": "^0.8.2",
-		"vuex": "^4.0.2"
+		"swiper": "8",
+		"vee-validate": "^4.5.10",
+		"vue": "^3.2.30",
+		"vue-router": "^4.0.12",
+		"vuex": "^4.0.2",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.12.16",
+		"@babel/eslint-parser": "^7.17.0",
 		"@capacitor/cli": "3.2.5",
-		"@vue/cli-plugin-babel": "~4.5.0",
-		"@vue/cli-plugin-e2e-cypress": "~4.5.0",
-		"@vue/cli-plugin-eslint": "~4.5.0",
-		"@vue/cli-plugin-router": "~4.5.0",
-		"@vue/cli-plugin-unit-jest": "~4.5.0",
-		"@vue/cli-service": "~4.5.0",
+		"@vue/cli-plugin-babel": "~5.0.0-rc.2",
+		"@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.2",
+		"@vue/cli-plugin-eslint": "~5.0.0-rc.2",
+		"@vue/cli-plugin-router": "~5.0.0-rc.2",
+		"@vue/cli-plugin-unit-jest": "~5.0.0-rc.2",
+		"@vue/cli-service": "~5.0.0-rc.2",
 		"@vue/compiler-sfc": "^3.0.0-0",
 		"@vue/test-utils": "^2.0.0-0",
-		"eslint": "^6.7.2",
-		"eslint-plugin-vue": "^7.0.0-0",
+		"cypress": "^8.3.0",
+		"eslint": "^7.32.0",
+		"eslint-plugin-vue": "^8.0.3",
+		"jest": "^27.1.0",
 		"node-sass": "^6.0.1",
 		"sass": "^1.43.2",
 		"sass-loader": "^10.1.1",
 		"vue-jest": "^5.0.0-0"
-	},
-	"description": "An Ionic project"
+	}
 }
