--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"swiper": "8",
 		"vee-validate": "^4.5.10",
 		"vue": "^3.2.30",
+		"vue-i18n": "^9.1.10",
 		"vue-router": "^4.0.12",
 		"vuex": "^4.0.2",
 		"yup": "^0.32.11"
